--- a/startpage/style.css
+++ b/startpage/style.css
@@ -2,8 +2,8 @@
 
 
 * {
-	font-family: "Terminus", "Terminus (TTF)";
-	font-size: 16px;
+	font-family: "scientifica";
+	font-size: 20px;
 }
 
 
@@ -38,7 +38,7 @@ html {
 }
 
 .lst {
-    padding-bottom: 1.5em;
+    padding-bottom: 1.8em;
 }
 
 a {
@@ -59,5 +59,5 @@ a:hover {
 
 .cat {
     font-weight: 400;
-    padding-bottom: 1.5em;
+    padding-bottom: 1.8em;
 }
