--- a/waybar/style.css
+++ b/waybar/style.css
@@ -73,7 +73,7 @@ background-color: #FFFFFF;
     #idle_inhibitor,
     #mpd {
         padding: 0 10px;
-        margin: 1;
+        margin: 0 0.5;
         color: #ffffff;
     }
 
