fix: red no-italics mode in sway/waybar.

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -55,7 +55,7 @@ background-color: #FFFFFF;
     }
 
     #mode {
-        background-color: #64727D;
+        background-color: #a4222D;
         border-bottom: 3px solid #ffffff;
     }
 
