--- a/waybar/style.css
+++ b/waybar/style.css
@@ -2,7 +2,7 @@
     border: none;
     border-radius: 0;
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: "JetBrainsMono Nerd Font";
+    font-family: "Hack Nerd Font";
     font-size: 13px;
     min-height: 0;
 }
