--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,22 +1,21 @@
 * {
-    border: none;
-    border-radius: 0;
-    /* `otf-font-awesome` is required to be installed for icons */
-    font-family: "Hack Nerd Font";
-    font-size: 13px;
-    min-height: 0;
+  border: none;
+  border-radius: 6;
+  padding: 1px;
+  /* `otf-font-awesome` is required to be installed for icons */
+  font-family: "Hack Nerd Font";
+  font-size: 14px;
+  min-height: 0;
 }
 
 window#waybar {
-    background-color: rgba(0, 0, 0, 0.7);
-    border-bottom: 0;
-    color: #ffffff;
-    transition-property: background-color;
-    transition-duration: .5s;
+  border-bottom: 0;
+  color: #ffffff;
+  background: rgba(0,0,0,0.2);
 }
 
 window#waybar.hidden {
-    opacity: 0.7;
+  opacity: 0.7;
 }
 
 /*
@@ -26,128 +25,132 @@ background-color: transparent;
 window#waybar.solo {
 background-color: #FFFFFF;
 }
- */
+*/
 
-    #workspaces button {
-        padding: 0 5px;
-        margin: 0 2px;
-        color: #ffffff;
-        border-bottom: 3px solid transparent;
-    }
+#workspaces button {
+  padding: 0 5px;
+  margin: 0 2px;
+  color: #ffffff;
+  border-bottom: 3px solid transparent;
+}
 
-    /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
-    #workspaces button:hover {
-        background: rgba(255, 255, 255, 0.2);
-        box-shadow: inherit;
-        border-bottom: 3px solid #ffffff;
-    }
+/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
+#workspaces button:hover {
+  background: rgba(255, 255, 255, 0.2);
+  box-shadow: inherit;
+  border-bottom: 3px solid #ffffff;
+}
 
-    #workspaces button.focused {
-        background-color: #295499;
-        border-bottom: 3px solid #000000;
-        color: #ffffff;
-    }
+#workspaces button.focused {
+  background-color: #295499;
+  border-bottom: 3px solid #000000;
+  color: #ffffff;
+}
 
-    #workspaces button.active {
-        background-color: #295499;
-        border-bottom: 3px solid #000000;
-        color: #ffffff;
-    }
+#workspaces button.active {
+  background-color: #295499;
+  border-bottom: 3px solid #000000;
+  color: #ffffff;
+}
 
-    #workspaces button.urgent {
-        background-color: #ffeb3b;
-        color: #000000;
-        border-bottom: 3px solid #000000;
-    }
+#workspaces button.urgent {
+  background-color: #ffeb3b;
+  color: #000000;
+  border-bottom: 3px solid #000000;
+}
 
-    #mode {
-        background-color: #a4222D;
-        border-bottom: 3px solid #ffffff;
-    }
+#mode {
+  background-color: #a4222D;
+  border-bottom: 3px solid #ffffff;
+}
 
-    #clock,
-    #battery,
-    #cpu,
-    #memory,
-    #temperature,
-    #backlight,
-    #network,
-    #pulseaudio,
-    #custom-media,
-    #tray,
-    #mode,
-    #mpd {
-        padding: 0 10px;
-        margin: 0 0.5;
-        color: #ffffff;
-    }
-    #idle_inhibitor {
-        padding: 0 10px 0 5px;
-        margin: 0 0.5;
-        color: #ffffff;
-    }
+#clock,
+#battery,
+#cpu,
+#memory,
+#temperature,
+#backlight,
+#network,
+#pulseaudio,
+#custom-media,
+#tray,
+#mode,
+#mpd {
+  padding: 0 10px;
+  margin: 0 0.5;
+  color: #ffffff;
+}
+#idle_inhibitor {
+  padding: 0 10px 0 5px;
+  margin: 0 0.5;
+  color: #ffffff;
+}
 
-    #clock {
-        background-color: #295499;
-    }
-    #battery {
-        background-color: #555555;
-    }
-    #battery.charging {
-        color: #ffffff;
-        background-color: #26A65B;
-    }
-    #pulseaudio {
-        background-color: #FF7228;
-    }
-    #pulseaudio.muted {
-        background-color: #d32f2f;
-    }
-    #backlight {
-        color: #000000;
-        background-color: #F4B400;
-    }
-    #custom-cpulevels{
-        padding: 0;
-        margin: 1;
-        margin-bottom: -5px;
-        color: #0E8C4F;
-    }
-    #cpu,
-    #memory {
-        background-color: #0E8C4F;
-    }
+#clock {
+  background-color: #295499;
+}
+#battery {
+  background-color: #555555;
+}
+#battery.charging {
+  color: #ffffff;
+  background-color: #26A65B;
+}
+#pulseaudio {
+  background-color: #FF7228;
+}
+#pulseaudio.muted {
+  background-color: #d32f2f;
+}
+#backlight {
+  color: #000000;
+  background-color: #F4B400;
+}
+#custom-cpulevels{
+  padding: 0;
+  margin: 1;
+  margin-bottom: -5px;
+  color: #0E8C4F;
+}
+#cpu,
+#memory {
+  background-color: #0E8C4F;
+}
 
-    @keyframes blink {
-        to {
-            background-color: #ffffff;
-            color: #000000;
-        }
-    }
+@keyframes blink {
+to {
+  background-color: #ffffff;
+  color: #000000;
+}
+}
 
-    #battery.critical:not(.charging) {
-        background-color: #d32f2f;
-        color: #ffffff;
-        animation-name: blink;
-        animation-duration: 0.5s;
-        animation-timing-function: linear;
-        animation-iteration-count: infinite;
-        animation-direction: alternate;
-    }
+#battery.critical:not(.charging) {
+  background-color: #d32f2f;
+  color: #ffffff;
+  animation-name: blink;
+  animation-duration: 0.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
 
-    label:focus {
-        background-color: #000000;
-    }
+label:focus {
+  background-color: #000000;
+}
 
-    #network.disconnected {
-        background-color: #d32f2f;
-    }
+#network.disconnected {
+  background-color: #d32f2f;
+}
 
-    #temperature.critical {
-        background-color: #d32f2f;
-    }
+#temperature.critical {
+  background-color: #d32f2f;
+}
 
-    #idle_inhibitor.activated {
-        color: #295499;
-        background-color: #ffff55;
-    }
+#idle_inhibitor.activated {
+  color: #295499;
+  background-color: #ffff55;
+}
+tooltip {
+  background: rgba(43, 48, 59, 0.6);
+  border: 1px solid rgba(100, 114, 125, 0.5);
+}
