feat: update blue color.

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -42,7 +42,7 @@ background-color: #FFFFFF;
 }
 
 #workspaces button.focused {
-  background-color: #295499;
+  background-color: #5984ff;
   border-bottom: 3px solid #000000;
   color: #ffffff;
 }
