--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,17 +1,18 @@
 * {
   border: none;
-  border-radius: 4;
-  padding: 0.1em;
+  border-radius: 8;
+  padding: 0.15em;
   /* `otf-font-awesome` is required to be installed for icons */
   font-family: "Hack Nerd Font";
   font-size: 13px;
+  text-shadow: 0px 0px 6px black, 1px 1px 2px black;
   min-height: 0;
 }
 
 window#waybar {
   border-bottom: 0;
   color: #ffffff;
-  background: rgba(0,0,0,0.4);
+  background: rgba(0,0,0,0);
 }
 
 window#waybar.hidden {
