feat: adjust styles.

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -111,7 +111,7 @@ background-color: #FFFFFF;
   background-color: #d32f2f;
 }
 #backlight {
-  color: #000000;
+  color: #ffffff;
   background-color: #F4B400;
 }
 #custom-cpulevels{
