--- a/waybar/style.css
+++ b/waybar/style.css
@@ -5,7 +5,7 @@
   /* `otf-font-awesome` is required to be installed for icons */
   font-family: "Hack Nerd Font";
   font-size: 13px;
-  text-shadow: 0px 0px 2px black, 1px 1px 1px black;
+  text-shadow: 1px 1px 1px black;
   min-height: 0;
 }
 
@@ -156,7 +156,8 @@ label:focus {
 
 #idle_inhibitor.activated {
   color: #295499;
-  background-color: #ffff55;
+  background-color: #ffdd55;
+  text-shadow: none;
 }
 tooltip {
   background: rgba(43, 48, 59, 0.6);
